--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
                     Slate is designed for freelancers</h4>
             </div>
             <div class="row  contact-row">
-                <div class="col-md-5 active p0">
+                <div class="col-md-5 active p0 od-1">
                     <div class="form-contact ">
                         <form>
                             <div class="form-group">
