--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
                 </div>
                 <div class="col-md-5">
-                    <img src="./img/screencontent.png" class="img-fluid img-content">
+                    <img src="./img/screencontent.png" class=" img-content">
                 </div>
             </div>
         </div>
@@ -537,8 +537,20 @@
 
                         <div class="col-md-12 col-lg-6">
                             <ul>
-                                <li><i class=" mr-2 fa-solid fa-location-dot"></i>7480 Mockingbird Hill undefined</li>
-                                <li><i class=" mr-2 fa-solid fa-phone"></i>(239) 555-0108</li>
+
+                                <li>
+                                    <div class="d-flex "><i class=" mr-2 fa-solid fa-location-dot"></i>
+                                        <p>7480 Mockingbird Hill undefined</p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="d-flex ">
+
+                                        <i class=" mr-2 fa-solid fa-phone"></i>
+                                        <p>(239) 555-0108</p>
+                                    </div>
+
+                                </li>
                                 <li>
                                     <div class="contact-social  ms-auto d-flex align-items-center">
                                         <a class=" nav-link" href="#"><i class="fa-brands fa-facebook"></i></a>
